# BitMRC

./: .gitignore  .gitmodules  BitMRC.sln  CMakeLists.txt  LICENSE  Options.cmake  README.md  TODO  UpgradeLog2.htm  doMakeLinux.sh
BitMRC/: Addr.cpp  Addr.h  BitMRC.cpp  BitMRC.h  BitMRC.vcxproj  BitMRC.vcxproj.filters  CMakeLists.txt  Configuration.cpp  NodeBlacklist.cpp  NodeConnection.cpp  NodeConnection.h  Packet.h  base58.cpp  class.cpp  class.hpp  class.ui  endian.cpp  endian.h  main.cpp  main.h  packet.cpp  pow.cpp  pow.h  utils.cpp  utils.h
BitMRC/Storage/: ColumnSpec.cpp  QueryResult.cpp  QueryResultElement.cpp  RowSpec.cpp  SQLiteLinux.c  Storable.cpp  StorableConfiguration.cpp  StorableQueryConfig.cpp  Storage_mysql.cpp  Storage_sqlite3.cpp  Unique_Key.cpp
BitMRC/etc/: create_db.sh
BitMRC/include/: Addr.h  BitMRC.h  Configuration.h  NodeBlacklist.h  NodeConnection.h  Packet.h  StorageInterface.h  base58.h  bitmrc_endian.h  main.h  pow.h  types.h  utils.h
BitMRC/include/Exceptions/: BitMRC_Exception.h  BitMRC_NoQueryConfigException.h
BitMRC/include/Storage/: ColumnSpec.h  QueryResult.h  QueryResultElement.h  RowSpec.h  SQLiteLinux.h  Storable.h  StorableConfiguration.h  StorableQueryConfig.h  Storage.h  StorageInterface.h  Storage_mysql.h  Storage_sqlite3.h  Unique_Key.h
BitMRC/tests/: CMakeLists.txt
BitMRC/tests/include/: StorableAddressTest.h  StorableConfigurationTest.h
BitMRC/tests/src/: EndianTest.cpp  MySQLTest.cpp  NodeTests.cpp  SQLiteTest.cpp  StorableAddressTest.cpp  StorableConfigurationTest.cpp  StorablePacketTest.cpp  StorableTest.cpp  TestTemplate.cpp  UtilsTest.cpp
BitMRC/tests/src/Storage/: ColumnSpecTest.cpp  RowColumnTest.cpp
Documentation/: BitMRC.classes.txt  BitMRC.object.hierarchy.txt  bitmrc_arch.txt  bitmrc_branching.txt
cryptopp/: cryptdll.vcxproj  cryptdll.vcxproj.filters  cryptest.sln  cryptest.vcxproj  cryptest.vcxproj.filters  cryptlib.vcxproj  cryptlib.vcxproj.filters  dlltest.vcxproj
trial/: CMakeLists.txt  dns.cpp  thread_test.cpp
trial/include/: thread_test.h
windows/cpptest/win/VisualStudio.NET/: VisualStudio.NET.sln
windows/sqlite3/: sqlite3.exp
